--- a/docker/.env
+++ b/docker/.env
@@ -56,7 +56,8 @@ INFINITY_PSQL_PORT=5432
 # The password for MySQL.
 MYSQL_PASSWORD=infini_rag_flow
 # The hostname where the MySQL service is exposed
-MYSQL_HOST=mysql
+# MYSQL_HOST=mysql
+MYSQL_HOST=localhost
 # The database of the MySQL service to use
 MYSQL_DBNAME=rag_flow
 # The port used to expose the MySQL service to the host machine,
@@ -79,7 +80,8 @@ MINIO_USER=rag_flow
 MINIO_PASSWORD=infini_rag_flow
 
 # The hostname where the Redis service is exposed
-REDIS_HOST=redis
+REDIS_HOST=localhost
+# REDIS_HOST=redis
 # The port used to expose the Redis service to the host machine,
 # allowing EXTERNAL access to the Redis service running inside the Docker container.
 REDIS_PORT=6379
