--- a/docker/docker-compose-base.yml
+++ b/docker/docker-compose-base.yml
@@ -32,7 +32,7 @@ services:
       timeout: 10s
       retries: 120
     networks:
-      - ragflow
+      - 1panel-network
     restart: on-failure
 
   opensearch01:
@@ -70,7 +70,7 @@ services:
       timeout: 10s
       retries: 120
     networks:
-      - ragflow
+      - 1panel-network
     restart: on-failure
 
   infinity:
@@ -95,7 +95,7 @@ services:
         soft: 500000
         hard: 500000
     networks:
-      - ragflow
+      - 1panel-network
     healthcheck:
       test: ["CMD", "curl", "http://localhost:23820/admin/node/current"]
       interval: 10s
@@ -115,7 +115,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
-      - ragflow
+      - 1panel-network
     security_opt:
       - no-new-privileges:true
     environment:
@@ -133,35 +133,35 @@ services:
       retries: 5
     restart: on-failure
 
-  mysql:
-    # mysql:5.7 linux/arm64 image is unavailable.
-    image: mysql:8.0.39
-    container_name: ragflow-mysql
-    env_file: .env
-    environment:
-      - MYSQL_ROOT_PASSWORD=${MYSQL_PASSWORD}
-      - TZ=${TIMEZONE}
-    command:
-      --max_connections=1000
-      --character-set-server=utf8mb4
-      --collation-server=utf8mb4_unicode_ci
-      --default-authentication-plugin=mysql_native_password
-      --tls_version="TLSv1.2,TLSv1.3"
-      --init-file /data/application/init.sql
-      --binlog_expire_logs_seconds=604800
-    ports:
-      - ${MYSQL_PORT}:3306
-    volumes:
-      - mysql_data:/var/lib/mysql
-      - ./init.sql:/data/application/init.sql
-    networks:
-      - ragflow
-    healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-uroot", "-p${MYSQL_PASSWORD}"]
-      interval: 10s
-      timeout: 10s
-      retries: 3
-    restart: on-failure
+  # mysql:
+  #   # mysql:5.7 linux/arm64 image is unavailable.
+  #   image: mysql:8.0.39
+  #   container_name: ragflow-mysql
+  #   env_file: .env
+  #   environment:
+  #     - MYSQL_ROOT_PASSWORD=${MYSQL_PASSWORD}
+  #     - TZ=${TIMEZONE}
+  #   command:
+  #     --max_connections=1000
+  #     --character-set-server=utf8mb4
+  #     --collation-server=utf8mb4_unicode_ci
+  #     --default-authentication-plugin=mysql_native_password
+  #     --tls_version="TLSv1.2,TLSv1.3"
+  #     --init-file /data/application/init.sql
+  #     --binlog_expire_logs_seconds=604800
+  #   ports:
+  #     - ${MYSQL_PORT}:3306
+  #   volumes:
+  #     - mysql_data:/var/lib/mysql
+  #     - ./init.sql:/data/application/init.sql
+  #   networks:
+  #     - 1panel-network
+  #   healthcheck:
+  #     test: ["CMD", "mysqladmin" ,"ping", "-uroot", "-p${MYSQL_PASSWORD}"]
+  #     interval: 10s
+  #     timeout: 10s
+  #     retries: 3
+  #   restart: on-failure
 
   minio:
     image: quay.io/minio/minio:RELEASE.2023-12-20T01-00-02Z
@@ -178,22 +178,22 @@ services:
     volumes:
       - minio_data:/data
     networks:
-      - ragflow
+      - 1panel-network
     restart: on-failure
 
-  redis:
-    # swr.cn-north-4.myhuaweicloud.com/ddn-k8s/docker.io/valkey/valkey:8
-    image: valkey/valkey:8
-    container_name: ragflow-redis
-    command: redis-server --requirepass ${REDIS_PASSWORD} --maxmemory 128mb --maxmemory-policy allkeys-lru
-    env_file: .env
-    ports:
-      - ${REDIS_PORT}:6379
-    volumes:
-      - redis_data:/data
-    networks:
-      - ragflow
-    restart: on-failure
+  # redis:
+  #   # swr.cn-north-4.myhuaweicloud.com/ddn-k8s/docker.io/valkey/valkey:8
+  #   image: valkey/valkey:8
+  #   container_name: ragflow-redis
+  #   command: redis-server --requirepass ${REDIS_PASSWORD} --maxmemory 128mb --maxmemory-policy allkeys-lru
+  #   env_file: .env
+  #   ports:
+  #     - ${REDIS_PORT}:6379
+  #   volumes:
+  #     - redis_data:/data
+  #   networks:
+  #     - 1panel-network
+  #   restart: on-failure
 
 
 
@@ -204,13 +204,13 @@ volumes:
     driver: local
   infinity_data:
     driver: local
-  mysql_data:
-    driver: local
+  # mysql_data:
+    # driver: local
   minio_data:
     driver: local
-  redis_data:
-    driver: local
+  # redis_data:
+  #   driver: local
 
 networks:
-  ragflow:
+  1panel-network:
     driver: bridge
